syntax = "proto3";

message ChannelPayload {
  EventState event_state = 1;
  int32 requeue_count = 2;
}

message EventTimePayload {
  sfixed64 create_time = 1;
}

message IndexPayload {
  string event_id = 1;
  sfixed64 create_time = 2;
}

message EventPayload {
  bytes payload = 1;
  EventState default_event_state = 2;
  repeated string indexes = 3;
}

enum EventState {
  UNSPECIFIED_STATE = 0;
  QUEUED = 1;
  DEQUEUED_OK = 2;
  DEQUEUED_ERROR = 3;
}